--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
     />
     <link
+      rel="favicon icon"
+      href="/IMG/svg2.svg"
+      type="image/x-icon"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
       rel="stylesheet"/>
     <title>Document</title>
